# attentive

./: .gitignore  Cargo.toml  README.md  plan.md
.beads/: issues.jsonl
.github/workflows/: ci.yml
crates/attentive/: Cargo.toml
crates/attentive-compress/: Cargo.toml
crates/attentive-compress/src/: compress.rs  compressor.rs  lib.rs  storage.rs  types.rs
crates/attentive-core/: Cargo.toml
crates/attentive-core/src/: config.rs  lib.rs  router.rs  types.rs
crates/attentive-index/: Cargo.toml
crates/attentive-index/src/: bm25.rs  index.rs  lib.rs  tfidf.rs
crates/attentive-learn/: Cargo.toml
crates/attentive-learn/src/: learner.rs  lib.rs  oracle.rs  predictor.rs
crates/attentive-plugins/: Cargo.toml
crates/attentive-plugins/src/: base.rs  burnrate.rs  lib.rs  loopbreaker.rs  registry.rs  verifyfirst.rs
crates/attentive-plugins/tests/: burnrate_tests.rs  loopbreaker_tests.rs  verifyfirst_tests.rs
crates/attentive-repo/: Cargo.toml
crates/attentive-repo/src/: lib.rs  mapper.rs  symbols.rs
crates/attentive-telemetry/: Cargo.toml
crates/attentive-telemetry/src/: io.rs  lib.rs  paths.rs  tokens.rs  types.rs
crates/attentive/benches/: full_pipeline.rs  index_search.rs  router_update.rs
crates/attentive/src/: cli.rs  main.rs
crates/attentive/src/commands/: benchmark.rs  compress.rs  diagnostic.rs  graph.rs  history.rs  hooks.rs  ingest.rs  init.rs  mod.rs  plugins.rs  report.rs  status.rs  version.rs
crates/attentive/tests/: full_pipeline.rs  learner_maturity.rs  plugin_pipeline.rs  router_cold_start.rs  router_decay_activation.rs
crates/attentive/tests/common/: mod.rs
