[package]
name = "attentive-compress"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
attentive-core = { path = "../attentive-core" }
attentive-telemetry = { path = "../attentive-telemetry" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rusqlite = { version = "0.38", features = ["bundled"] }
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["rt", "macros"] }
