[package]
name = "attentive-index"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
attentive-core = { path = "../attentive-core" }
attentive-telemetry = { path = "../attentive-telemetry" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tree-sitter = { version = "0.20", optional = true }

[features]
tree-sitter = ["dep:tree-sitter"]
