[package]
name = "attentive-index"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
attentive-telemetry = { path = "../attentive-telemetry" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rusqlite = { version = "0.38", features = ["bundled"] }
regex = "1.10"
fastembed = { version = "5" }

[features]
tree-sitter = []
