[package]
name = "attentive-learn"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
attentive-core = { path = "../attentive-core" }
attentive-telemetry = { path = "../attentive-telemetry" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
hf-hub = { version = "0.3", optional = true }

[features]
embeddings = ["dep:hf-hub"]
