[package]
name = "attentive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
attentive-core = { path = "../attentive-core" }
attentive-telemetry = { path = "../attentive-telemetry" }
attentive-plugins = { path = "../attentive-plugins" }
attentive-learn = { path = "../attentive-learn" }
attentive-index = { path = "../attentive-index" }
attentive-repo = { path = "../attentive-repo" }
attentive-compress = { path = "../attentive-compress" }
anyhow = { workspace = true }
tracing = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
attentive-core = { path = "../attentive-core" }
attentive-index = { path = "../attentive-index" }
attentive-learn = { path = "../attentive-learn" }
attentive-plugins = { path = "../attentive-plugins" }
attentive-repo = { path = "../attentive-repo" }
attentive-telemetry = { path = "../attentive-telemetry" }
criterion = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }

[[bench]]
name = "router_update"
harness = false

[[bench]]
name = "full_pipeline"
harness = false

[[bench]]
name = "index_search"
harness = false
